htpcmanager/htpcmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: htpcmanager
  name: htpcmanager
  namespace: mediaserver
spec:
  ports:
  - name: "8085"
    port: 8085
    targetPort: 8085
  selector:
    io.kompose.service: htpcmanager
  type: NodePort
status:
  loadBalancer: {}
