htpcmanager/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: htpcmanager
  namespace: mediaserver
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: htpcmanager.internal.carlosedp.com
    http:
      paths:
      - path: /
        backend:
          serviceName: htpcmanager
          servicePort: 8085
